agregando v2(mejorando responsive mobile)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,13 +12,12 @@
     <link rel="stylesheet" href="css/tablet.css" media="screen and (min-width: 600px)">
     <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 800px)">
 </head>
-
 <body>
     <header class="container">
         <nav id="nav" class="nav">
             <ul class="container-nav">
                 <li class="item-nav item-nav-home"><a class="enlace home" href=""><i
-                            class="bi bi-house-door"></i>Home</a></li>
+                class="bi bi-house-door"></i>Home</a></li>
                 <li class="item-nav"><a href="" class="enlace contact">About me</a></li>
                 <li class="item-nav"><a href="" class="enlace service">Service</a></li>
                 <li class="item-nav item-nav"><a href="" class="enlace skill">Skills</a></li>
@@ -32,15 +30,7 @@
             </div>
             <img class="img-profile" src="img/4d3b45d0-dd1b-435a-b26b-0c2f6e65fbea.jpg" alt="">
         </div>
-        <div class="d-flex align-items-center">
-            <strong>Loading...</strong>
-            <div class="spinner-border ms-auto  text-danger" role="status" style="width: 2.5rem; height: 2.5rem;"
-                aria-hidden="true"></div>
-        </div>
     </header>
-
-
-
     <main>
         <section class="section-about">
             <div class="container-about-me">
@@ -51,14 +41,21 @@
                         <hr class="separador">
                         <div>
                             <p>
-                                Hi, my name is Nicolas. I'm a software development student at CESDE University of
-                                Medellin
-                                and I'm also studying front-end web development on the Platzi platform.
-                                I do not have much work experience but I have worked on several personal and university
-                                projects
+                                Hi, my name is Nicolas. I'm a Designer, Front-end Developer & Mentor
+                                I design and code beautifully simple things, and I love what I do.
                             </p>
+                            <p>
+                                I am studying a technique in software development at the CESDE technician.
+                                I am also on the platzi platform studying web development focused on the javascript
+                                school
+                            </p>
+                            <p>
+                                I have developed university and personal projects that have helped me gain experience in the development
+                            </p>
+                            <p>
+                                I like videogames also play practice footbal in the</p>
                         </div>
-                    </div>
+                    </div>  
                 </div>
                 <div class="item-about-me">
                     <h2>Personal info</h2>
@@ -78,44 +75,43 @@
                 </div>
             </div>
         </section>
-
         <section>
             <div class="skills">
-                <h2><i class="bi bi-columns-gap"></i> Skills</h2>
-                <h3>I have skills in front-end development</h3>
+                <h2 class="text"><i class="bi bi-columns-gap"></i>Skills</h2>
+                <h3 class="text">I have skills in front-end development</h3>
                 <div class="container-skills">
-                    <h3>html</h3>
+                    <div>
+                        <h3 class="name">html</h3>
+                    </div>
                     <div class="item-skill">
                         <img class="img-skill" src="img/html.png" alt="">
                     </div>
                     <div class="description-skills">
-                        <h5>structure of an HTML document</h5>
-                        <h5>HTML semantic tags</h5>
-                        <h5>HTML Best Practices</h5>
+                        <h4>structure of an HTML document</h4>
+                        <h4>HTML semantic tags</h4>
+                        <h4>HTML Best Practices</h4>
                     </div>
-                    <h3>Css responsive desing</h3>
+                    <h3 class="name">Css responsive desing</h3>
                     <div class="item-skill">
                         <img class="img-skill" src="img/css-131-722685.webp" alt="">
                     </div>
                     <div class="description-skills">
-                        <h4>
-                            specificity
-                            BEM naming methodologies</h5>
-                            <h4>pattern design responsive</h5>
+                        <h4> specificity BEM naming methodologies</h4>
+                        <h4>pattern design responsive</h4>
                     </div>
-                    <h3>Javascript</h3>
+                    <h3 class="name">Javascript</h3>
                     <div class="item-skill"><img class="img-skill" src="img/js.png" alt="">
                     </div>
                     <div class="description-skills">
-                        <h5>json format
-                            API Rest</h5>
-                        <h5>anonymous functions</h5>
-                        <h5>POO
-                            arrays</h5>
+                        <h4>json format
+                            API Rest</h4>
+                        <h4>anonymous functions</h4>
+                        <h4>POO
+                            arrays</h4>
                     </div>
                 </div>
-                <h2><i class="bi bi-book"></i>bookstore</h2>
-                <h3>bootstrap and React</h3>
+                <h2 class="text"><i class="bi bi-book"></i>bookstore</h2>
+                <h3 class="text">bootstrap and React</h3>
                 <div class="container-librerias">
                     <div class="item-skill">
                         <img class="img-skill" src="img/bootstrap-logo.png" alt="">
@@ -123,21 +119,25 @@
                     <div class="item-skill"><img class="img-skill" src="img/react.png" alt=""></div>
                 </div>
                 <div class="firebase">
-                <h2>Database Google</h2>
-                <h4><i class="bi bi-pc-horizontal"></i>firebase</h4>
-                <div class="container-librerias">
-                    <div class="item-skill">
-                        <img class="img-skill" src="img/firebase.webp" alt="">
+                    <h2 class="text">Database Google</h2>
+                    <h4 class="firebase"><i class="bi bi-pc-horizontal"></i>firebase</h4>
+                    <div class="container-librerias">
+                        <div class="item-skill">
+                            <img class="img-skill" src="img/firebase.webp" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
-            </div>
             <div class="herammientas">
                 <i class="bi bi-tools"></i>
-                <h2>Other tools</h2>
+                <h2>Other development tools</h2>
+
                 <h2>Back-end</h2>
-                <h3></h3>
+
                 <div class="container-herramientas">
+                    <div class="item-tools">
+                        <img class="img-skill" src="img/git.webp" alt="">
+                    </div>
                     <div class="item-tools">
                         <img class="img-skill" src="img/php.png" alt="">
                     </div>
@@ -154,6 +154,9 @@
                         <img class="img-skill" src="img/SQLServer-png.png" alt="">
                     </div>
                 </div>
+                <a href="productos.php">
+
+                </a>
             </div>
         </section>
     </main>
@@ -161,16 +164,18 @@
         <div class="container-footer">
             <div class="footer">
                 <h1>Nicolas betancur</h1>
-                <i class="bi bi-boxes"></i> 
+                <i class="bi bi-boxes"></i>
                 <ul class="redes-sociales">
                     <li class="item-redes-sociales"><a href="" class="enlace-red"><i class="bi bi-github"></i></a></li>
                     <li class="item-redes-sociales"><a href="" class="enlace-red"><i class="bi bi-youtube"></i></a></li>
-                    <li class="item-redes-sociales"><a href="" class="enlace-red"><i class="bi bi-linkedin"></i></a></li>
-                    <li class="item-redes-sociales"><a href="" class="enlace-red"><i class="bi bi-instagram"></i></a></i></li>
-                </ul>       
+                    <li class="item-redes-sociales"><a href="" class="enlace-red"><i class="bi bi-linkedin"></i></a>
+                    </li>
+                    <li class="item-redes-sociales"><a href="" class="enlace-red"><i
+                                class="bi bi-instagram"></i></a></i></li>
+                </ul>
             </div>
             <div class="div">
-                <p> <small>&copy; Copyright 2022, Betasof</small> 2022</p>
+                <p class="ftr"> <small>&copy; Copyright 2022, Betasof</small> 2022</p>
             </div>
         </div>
     </footer>
@@ -181,4 +186,5 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
